--- a/LibraryAppCore.WebUI/LibraryAppCore.WebUI.csproj
+++ b/LibraryAppCore.WebUI/LibraryAppCore.WebUI.csproj
@@ -23,8 +23,10 @@
   <ItemGroup>
     <None Remove="ClientApp\app\components\author\author.component.ts" />
     <None Remove="ClientApp\app\components\book\book.component.ts" />
+    <None Remove="ClientApp\app\components\dbconnection.ts" />
     <None Remove="ClientApp\app\models\author.ts" />
     <None Remove="ClientApp\app\models\book.ts" />
+    <None Remove="ClientApp\app\models\dbconnection.ts" />
     <None Remove="ClientApp\app\services\author.service.ts" />
     <None Remove="ClientApp\app\services\book.service.ts" />
   </ItemGroup>
@@ -36,10 +38,14 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\app\components\author\author.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\book\book.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\dbconnection\dbconnection.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\dbconnection\dbcon.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\author.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\book.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\dbconnection.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\author.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\book.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\dbconnection.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\pagination.service.ts" />
   </ItemGroup>
 
