--- a/LibraryAppCore.WebUI/appsettings.json
+++ b/LibraryAppCore.WebUI/appsettings.json
@@ -1,7 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Librarydb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Librarydb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDbConnection": "mongodb://localhost:27017/Library"
   },
   "Logging": {
     "IncludeScopes": false,
