Added interface implementation for work with PostgreSql

--- a/LibraryAppCore.WebUI/LibraryAppCore.WebUI.csproj
+++ b/LibraryAppCore.WebUI/LibraryAppCore.WebUI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,10 @@
     <TypeScriptCompile Include="ClientApp\app\services\book.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\dbconnection.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\pagination.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
