--- a/LibraryAppCore.Domain/LibraryAppCore.Domain.csproj
+++ b/LibraryAppCore.Domain/LibraryAppCore.Domain.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="2.1.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.4" />
   </ItemGroup>
-
 </Project>
