--- a/LibraryAppCore.WebUI/appsettings.json
+++ b/LibraryAppCore.WebUI/appsettings.json
@@ -1,7 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=user;Host=localhost;Port=5432;Database=Library;Pooling=true;",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Librarydb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PostgreSqlConnection": "User ID=postgres;Password=user;Host=localhost;Port=5432;Database=Library;Pooling=true;",
     "MongoDbConnection": "mongodb://localhost:27017/Library"
   },
   "Logging": {
