first working prototype auth with IdentityServer

--- a/LibraryAppCore.AuthServer/appsettings.json
+++ b/LibraryAppCore.AuthServer/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "ConnectionStrings": {
+    "MsSqlConnection": "Server=(localdb)\\mssqllocaldb;Database=Librarydb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "User ID=postgres;Password=user;Host=localhost;Port=5432;Database=Library;Pooling=true;",
+    "MongoDbConnection": "mongodb://localhost:27017/Library"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
