--- a/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
+++ b/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
   </ItemGroup>
 
@@ -21,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraryAppCore.AuthServer\LibraryAppCore.AuthServer.csproj" />
     <ProjectReference Include="..\LibraryAppCore.Domain\LibraryAppCore.Domain.csproj" />
   </ItemGroup>
 
