problem with auth in IdentitiServer

--- a/LibraryAppCore.ClientSide/appsettings.json
+++ b/LibraryAppCore.ClientSide/appsettings.json
@@ -10,6 +10,8 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    }
+    },
+    "IdentityServerAddress": "http://localhost:55203",
+    "ApiAddress": "http://localhost:55199"
   }
 }
