--- a/LibraryAppCore.AuthServer/LibraryAppCore.AuthServer.csproj
+++ b/LibraryAppCore.AuthServer/LibraryAppCore.AuthServer.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="IdentityServer4" Version="2.0.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="2.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
   </ItemGroup>
 
