--- a/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
+++ b/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Migrations\20171018111948_init.cs" />
-    <Compile Include="Migrations\20171018111948_init.Designer.cs" />
+    <Compile Include="Migrations\20171020095809_add_sections_book.cs" />
+    <Compile Include="Migrations\20171020095809_add_sections_book.Designer.cs" />
     <Compile Include="Migrations\LibraryPostgreSqlContextModelSnapshot.cs" />
   </ItemGroup>
 
