first prototype new pagination

--- a/LibraryAppCore.ClientSide/LibraryAppCore.ClientSide.csproj
+++ b/LibraryAppCore.ClientSide/LibraryAppCore.ClientSide.csproj
@@ -29,13 +29,13 @@
     <None Remove="ClientApp\app\components\book\book.component.ts" />
     <None Remove="ClientApp\app\components\dbconnection\dbcon.component.ts" />
     <None Remove="ClientApp\app\config.ts" />
-    <None Remove="ClientApp\app\filter\orderby.pipe.ts" />
     <None Remove="ClientApp\app\models\author.ts" />
+    <None Remove="ClientApp\app\models\authorPagedResult.ts" />
     <None Remove="ClientApp\app\models\book.ts" />
+    <None Remove="ClientApp\app\models\bookPagedResult.ts" />
     <None Remove="ClientApp\app\models\bookViewModel.ts" />
     <None Remove="ClientApp\app\models\dbconnection.ts" />
     <None Remove="ClientApp\app\services\dbconnection.service.ts" />
-    <None Remove="ClientApp\app\services\pagination.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,18 +45,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\app\filter\category.pipe.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\author\author.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\book\book.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\dbconnection\dbcon.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\config.ts" />
-    <TypeScriptCompile Include="ClientApp\app\filter\orderby.pipe.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\author.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\authorPagedResult.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\book.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\bookPagedResult.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\bookViewModel.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\dbconnection.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\dbconnection.service.ts" />
-    <TypeScriptCompile Include="ClientApp\app\services\pagination.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
