--- a/LibraryAppCore.ClientSide/LibraryAppCore.ClientSide.csproj
+++ b/LibraryAppCore.ClientSide/LibraryAppCore.ClientSide.csproj
@@ -28,6 +28,7 @@
     <None Remove="ClientApp\app\components\author\author.component.ts" />
     <None Remove="ClientApp\app\components\book\book.component.ts" />
     <None Remove="ClientApp\app\components\dbconnection\dbcon.component.ts" />
+    <None Remove="ClientApp\app\components\modal-window\modal-windows.component.ts" />
     <None Remove="ClientApp\app\config.ts" />
     <None Remove="ClientApp\app\models\author.ts" />
     <None Remove="ClientApp\app\models\authorPagedResult.ts" />
@@ -48,6 +49,7 @@
     <TypeScriptCompile Include="ClientApp\app\components\author\author.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\book\book.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\dbconnection\dbcon.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\modal-window\modal-windows.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\config.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\author.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\authorPagedResult.ts" />
