--- a/LibraryAppCore.ClientSide/package.json
+++ b/LibraryAppCore.ClientSide/package.json
@@ -49,7 +49,8 @@
     "webpack-merge": "^4.1.0",
     "zone.js": "^0.8.12",
     "jsrsasign": "8.0.3",
-    "angular-auth-oidc-client": "1.3.13"
+    "angular-auth-oidc-client": "1.3.13",
+    "ngx-progressbar": "^2.1.1"
   },
   "devDependencies": {
     "@types/chai": "4.0.1",
