--- a/LibraryAppCore.ClientSide/package.json
+++ b/LibraryAppCore.ClientSide/package.json
@@ -50,7 +50,8 @@
     "zone.js": "^0.8.12",
     "jsrsasign": "8.0.3",
     "angular-auth-oidc-client": "1.3.13",
-    "ngx-progressbar": "^2.1.1"
+    "ngx-progressbar": "^2.1.1",
+    "ng2-component-spinner": "^0.2.1"
   },
   "devDependencies": {
     "@types/chai": "4.0.1",
