--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.csproj
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.csproj
@@ -40,6 +40,9 @@
     </Compile>
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
+    <Compile Include="Pagination\PagedResult.cs" />
+    <Compile Include="Services\AuthorService.cs" />
+    <Compile Include="Services\BookService.cs" />
     <Compile Include="ViewModels\AuthorsListViewModel.cs" />
     <Compile Include="ViewModels\AuthorViewModel.cs" />
     <Compile Include="ViewModels\BooksListViewModel.cs" />
@@ -75,6 +78,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\portable-net45+win8+wp8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.4.0.280\lib\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
