--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.UWP/project.json
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.UWP/project.json
@@ -1,9 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.2",
-    "sqlite-net-pcl": "1.4.118",
-    "SQLite.Net-PCL": "3.1.1",
-    "SQLite.Net.Async-PCL": "3.1.1",
+    "sqlite-net-pcl": "1.5.166-beta",
     "Xam.Plugin.Connectivity": "3.0.3",
     "Xamarin.Forms": "2.5.0.91635"
   },
