--- a/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
+++ b/LibraryAppCore.WebApi/LibraryAppCore.WebApi.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetCore.NPOI" Version="1.0.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
